--- a/mundo.html
+++ b/mundo.html
@@ -1,110 +1,313 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mundo</title>
-    <style>
-        h1{
-            text-align: center;
-        }
-        h3{
-            text-align: center;
-        }
-        h4{
-            text-align: center;
-        }
-        p{
-            text-align: center;
-        }
-    </style>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Mundo</title>
+  <!-- Bootstrap CSS -->
+  <link
+    href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+    rel="stylesheet"
+  />
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background-color: rgb(65, 65, 65);
+      color: #fff;
+      display: flex;
+      flex-direction: column;
+      min-height: 100vh;
+    }
+    .nav-link {
+      color: white;
+    }
+    .nav-link:hover {
+      color: firebrick;
+    }
+    .nav-pills {
+      --bs-nav-pills-link-active-bg: firebrick;
+    }
+    main {
+      display: flex;
+      flex-direction: row;
+      flex: 1;
+      padding: 20px;
+      gap: 20px; /* Espaçamento entre as colunas principais */
+    }
+    .temporadas {
+      flex: 1;
+      padding-right: 20px;
+      margin-bottom: 30px;
+    }
+    .temporadas h3,
+    .mapas h3 {
+      text-align: center;
+      background-color: firebrick;
+      margin-bottom: 20px;
+    }
+    .temporadas article,
+    .mapas article {
+      background-color: #333;
+      padding: 20px;
+      border-radius: 5px;
+      margin-bottom: 20px;
+    }
+    .temporadas article header h4,
+    .mapas article header h4 {
+      color: #fff;
+      text-align: center;
+      margin-bottom: 10px;
+    }
+    .temporadas article div p,
+    .mapas article div img {
+      margin: 0 auto;
+      max-width: 100%;
+      height: auto;
+    }
+    .mapas {
+      flex: 1;
+      padding-left: 20px; /* Espaçamento adicional à esquerda para balancear */
+      margin-bottom: 30px;
+    }
+    .noticias {
+      width: 300px;
+      background-color: #333;
+      color: #fff;
+      padding: 20px;
+      border-radius: 5px;
+      margin-bottom: 30px;
+    }
+    .noticias h3 {
+      border-bottom: 2px solid #fff;
+      padding-bottom: 10px;
+      color: #fff;
+      margin-bottom: 20px;
+    }
+    .noticia {
+      margin-bottom: 20px;
+    }
+    .noticia h4 {
+      color: firebrick;
+      margin-bottom: 5px;
+    }
+    .noticia p {
+      color: #ccc;
+    }
+    footer {
+      background-color: #333;
+      color: #fff;
+      text-align: center;
+      padding: 10px;
+      margin-top: auto;
+    }
+
+    .no-link-style {
+    color: inherit; /* Mantém a cor do elemento pai */
+    text-decoration: none; /* Remove a sublinhado */
+  }
+  .no-link-style:hover {
+    color: firebrick; /* Opcional: Adiciona um estilo ao passar o mouse */
+  }
+  </style>
 </head>
 <body>
-    <header id="Titulo">
-        <h1 id="inicio">Mundo</h1>
-        <p>Alguns apontamentos do Universo de Tatakai</p>
+  <div class="container-fluid">
+    <header
+      class="d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom"
+    >
+      <a
+        href="/"
+        class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none"
+      >
+        <h1>
+          <img
+            src="tatakaititlet.png"
+            width="128"
+            height="51"
+            alt="Tatakai RPG"
+          />
+        </h1>
+      </a>
+      <ul class="nav nav-pills">
+        <li class="nav-item">
+          <a href="index.html" class="nav-link">Início</a>
+        </li>
+        <li class="nav-item">
+          <a href="personagens.html" class="nav-link">Personagens</a>
+        </li>
+        <li class="nav-item">
+          <a href="mundo.html" class="nav-link active" aria-current="page"
+            >Mundo</a
+          >
+        </li>
+        <li class="nav-item">
+          <a href="novidades.html" class="nav-link">Novidades</a>
+        </li>
+        <li class="nav-item">
+          <a href="suporte.html" class="nav-link">Suporte</a>
+        </li>
+      </ul>
     </header>
-    <nav>
-        <h2>Menu de Navegação</h2>
-        <ul>
-            <li><a href="index.html">Pagina Principal</a></li>
-            <li><a href="personagens.html">Personagens</a></li>
-            <li><a href="mundo.html"><b>Mundo</b></a></li>
-            <li><a href="novidades.html">Novidades</a></li>
-        </ul>
-    </nav>
+
+    <div>
+      <img src="worldheader.png" alt="" width="100%" height="500px" max-width="100%" />
+  </div>
+
     <main>
+      <div class="temporadas">
         <section id="Temporadas">
+          <header>
+            <h3>Temporadas</h3>
+          </header>
+          <article>
             <header>
-                <h3>Temporadas</h3>
+              <h4>Primeira Temporada</h4>
             </header>
-            <article>
-                <header>
-                    <h4>Primeira Temporada</h4>
-                </header>
-                <div>
-                    <p>Os cenários das sessões que foram mestradas foram divididas em 3 temporadas, que possuem sendo que a terceira se passa em uma linha temporal diferente<br>
-                    A primeira temporada tem uma trama voltada as artes marciais de inicio, onde Jhonny (falecido amigo de Joe) e Joe foram introduzidos na história já entrando<br>
-                    em combate na primeira oportunidade. Contudo, após a morte de Jhonny em uma arena e o contato com One, Joe se isolou e para se distrair começou a estudar, livros<br>
-                    de sua casa, visto que sua familia era milionaria, achando um livro em especifico que ao comerçar a ler percebe uma lingua que nunca antes viu, após decifrar, se tratava<br>
-                    de um grimório que prendia um demonio ancestral, que era cultuado no oriente médio, onde iria retornar com um corpo fisico após ser liberado, dessa forma, Joe reune <br>
-                    os mais fortes que conhece para detê-lo</p>
-                </div>
-            </article>
-            <article>
-                <header>
-                    <h4>Segunda Temporada</h4>
-                </header>
-                <div>
-                    <p>A segunda temporada de inicio começa com os protagonistas sendo introduzidos na escola, que nesse universo possui a educação voltada para as artes marciais.<br>
-                    Tendo como protagonistas Miguel, Celta, Vini Jr. e Roberto Carlos, sendo ainda desconhecidos um pelo outro no inicio, onde foram se conhecendo no meio do organizar<br>
-                    de um torneio de artes marciais da escola, onde One é visto como diretor da escola localizada no Brasil. Com isso, é visivel que tal, temporada acontece alguns anos depois<br>
-                    da primeira, apos isso, a trama se foca no treinamento dos mesmos, juntamente com batalhas de gangues fora da escola, coisa que leva a morte de um dos protagonistas, miguel.</p>
-                </div>
-            </article>
-            <article>
-                <header>
-                    <h4>Terceira Temporada</h4>
-                </header>
-                <div>
-                    <p>A terceira temporada se inicia em um universo novo, que não segue o planeta terra de forma padrão, tendo o nome de Pantalasso, os protagonistas por alguma<br>
-                    sincronicidade do destino ou mesmo coencidência estavam indo a pé para Jusante do Renacimento, sendo a capital de onde estão, contudo diferente dos outros<br>
-                    protagonistas esses detinham um mal inerte a si. Após o conflito com alguns membros de um carro que quase atropelou um dos protagonistas, estes<br>
-                    assasinaram os mesmos, sem pestanejar, e após isso, foram a um bar onde puderam se abrigar por um dia, e logo no dia após reinvindicaram, na base do assassinato,<br>
-                    um ferro-velho, onde agora moram... (a história ainda está acontecendo)</p>
-                </div>
-            </article>
+            <div>
+              <p>
+                Os cenários das sessões que foram mestradas foram divididas em
+                3 temporadas, que possuem sendo que a terceira se passa em uma
+                linha temporal diferente.<br />
+                A primeira temporada tem uma trama voltada às artes marciais
+                de início, onde Johnny (falecido amigo de Joe) e Joe foram
+                introduzidos na história já entrando em combate na primeira
+                oportunidade. Contudo, após a morte de Johnny em uma arena e o
+                contato com One, Joe se isolou e para se distrair começou a
+                estudar, livros de sua casa, visto que sua família era
+                milionária, achando um livro em específico que ao começar a
+                ler percebe uma língua que nunca antes viu. Após decifrar,
+                percebe que se trata de um grimório que prendia um demônio
+                ancestral, que era cultuado no oriente médio e que retornará
+                com um corpo físico após ser liberado. Dessa forma, Joe reúne
+                os mais fortes que conhece para detê-lo.
+              </p>
+            </div>
+          </article>
+          <article>
+            <header>
+              <h4>Segunda Temporada</h4>
+            </header>
+            <div>
+              <p>
+                A segunda temporada inicia-se com os protagonistas sendo
+                introduzidos na escola, que nesse universo possui a educação
+                voltada para as artes marciais. Tendo como protagonistas
+                Miguel, Celta, Vini Jr. e Roberto Carlos, sendo ainda
+                desconhecidos um pelo outro no início, onde foram se
+                conhecendo no meio da organização de um torneio de artes
+                marciais da escola, onde One é visto como diretor da escola
+                localizada no Brasil. Com isso, é visível que tal temporada
+                acontece alguns anos depois da primeira, após isso, a trama se
+                foca no treinamento dos mesmos, juntamente com batalhas de
+                gangues fora da escola, coisa que leva a morte de um dos
+                protagonistas, Miguel.
+              </p>
+            </div>
+          </article>
+          <article>
+            <header>
+              <h4>Terceira Temporada</h4>
+            </header>
+            <div>
+              <p>
+                A terceira temporada se inicia em um universo novo, que não
+                segue o planeta terra de forma padrão, tendo o nome de
+                Pantalasso. Os protagonistas por alguma sincronicidade do
+                destino ou mesmo coincidência estavam indo a pé para Jusante
+                do Renascimento, sendo a capital de onde estão. Contudo,
+                diferente dos outros protagonistas, esses detinham um mal
+                inerte a si. Após o conflito com alguns membros de um carro
+                que quase atropelou um dos protagonistas, estes assassinaram
+                os mesmos, sem pestanejar, e após isso, foram a um bar onde
+                puderam se abrigar por um dia, e logo no dia após
+                reinvindicaram, na base do assassinato, um ferro-velho, onde
+                agora moram... (a história ainda está acontecendo)
+              </p>
+            </div>
+          </article>
         </section>
+      </div>
+
+      <div class="mapas">
         <section id="mapas">
+          <header>
+            <h3>Mapas</h3>
+          </header>
+          <article>
             <header>
-                <h3>Mapas</h3>
+              <h4>Primeira e Segunda Temporada</h4>
             </header>
-            <article>
-                <header>
-                    <h4>Primeira e Segunda Temporada</h4>
-                </header>
-                <div>
-                    <img src="mapa.jpg" alt="O mapa-mundi do nosso mundo real, contudo dentro do RPG, as divisões entre os paises era um pouco diferente">
-                </div>
-            </article>
-            <article>
-                <header>
-                    <h4>Terceira Temporada</h4>
-                </header>
-                <div>
-                    <img src="mapattk.jpg" alt="Se trata de um mapa do Pantalasso, mundo fictício de tatakai, onde existe somente dois supercontinentes e ilhas conjulgues desses, onde esses tambem portam países fictícios que possuem cultura e política própria.">
-                </div>
-            </article>
+            <div>
+              <img
+                src="mapa.jpg"
+                alt="O mapa-mundi do nosso mundo real, contudo dentro do RPG, as divisões entre os países eram um pouco diferentes"
+              />
+            </div>
+          </article>
+          <article>
+            <header>
+              <h4>Terceira Temporada</h4>
+            </header>
+            <div>
+              <img
+                src="mapattk.jpg"
+                alt="Se trata de um mapa do Pantalasso, mundo fictício de Tatakai, onde existe somente dois supercontinentes e ilhas conjulgues desses, onde esses também portam países fictícios que possuem cultura e política própria."
+              />
+            </div>
+          </article>
         </section>
+      </div>
+
+      <div class="noticias">
+        <h3>Notícias do Mundo do RPG</h3>
+        <div class="noticia">
+          <h4><a href="novidades.html#NovoCapitulo" class="no-link-style">Novo Capítulo de Tatakai RPG Lançado</a></h4>
+          <p>
+            Agora você pode conferir o mais recente capítulo da saga de
+            Tatakai RPG. Não perca as novas reviravoltas!
+          </p>
+        </div>
+        <div class="noticia">
+          <h4><a href="novidades.html#EventoEspecial" class="no-link-style">Evento Especial: Luta pela Justiça</a></h4>
+          <p>
+            Participe do evento especial onde você poderá desafiar os maiores
+            lutadores do reino!
+          </p>
+        </div>
+        <div class="noticia">
+          <h4><a href="novidades.html#AtualizacaoPersonagens" class="no-link-style">Atualização de Personagens</a></h4>
+          <p>
+            Conheça as novas habilidades e histórias dos personagens Thorkell,
+            One e Joe. Prepare-se para novos desafios!
+          </p>
+        </div>
+      </div>
     </main>
-    <aside>
-        <header>
-            <h4>Anúncio:</h4>
-        </header>
-        <video src="https://www.youtube.com/watch?v=LLXPr_Jcwkg" title="Anuncio de Ordem Paranormal RPG" controls autoplay muted></video>
-        <footer>
-            <p>Se trata de um teaser de um outro RPG brasileiro que você também pode gostar de se informar sobre.</p>
-        </footer>
-    </aside>
+  </div>
+
+  <footer class="row">
+    <div class="col text-center">
+      <footer
+        class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top"
+      >
+        <div class="col-md-4 d-flex align-items-center">
+          <a
+            href="/"
+            class="mb-3 me-2 mb-md-0 text-body-secondary text-decoration-none lh-1"
+          >
+            <svg class="bi" width="30" height="24">
+              <use xlink:href="#bootstrap"></use>
+            </svg>
+          </a>
+          <span class="mb-3 mb-md-0 text-white"
+            ><b>© 2024 Tatakai Corps</b>, Todos os direitos reservados</span
+          >
+        </div>
+      </footer>
+    </div>
+  </div>
+
+  <!-- Bootstrap JS Bundle -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
