--- a/novidades.html
+++ b/novidades.html
@@ -1,91 +1,319 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Novidades TTK</title>
-    <style>
-        h1{
-            text-align: center;
-        }
-        h3{
-            text-align: center;
-        }
-        h4{
-            text-align: center;
-        }
-        p{
-            text-align: center;
-        }
-    </style>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Novidades TTK</title>
+  <!-- Bootstrap CSS -->
+  <link
+    href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+    rel="stylesheet"
+  />
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background-color: rgb(65, 65, 65);
+      color: #fff;
+      display: flex;
+      flex-direction: column;
+      min-height: 100vh;
+    }
+    h1,
+    h4,
+    p {
+      text-align: center;
+      color: #fff;
+    }
+    .nav-link {
+      color: white;
+    }
+    .nav-link:hover {
+      color: firebrick;
+    }
+    .nav-pills {
+      --bs-nav-pills-link-active-bg: firebrick;
+    }
+    main {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      flex: 1;
+      padding: 20px;
+    }
+    section {
+      margin-bottom: 30px;
+      width: 100%;
+      max-width: 800px;
+    }
+    section header {
+      margin-bottom: 20px;
+    }
+    section article {
+      background-color: #333;
+      padding: 20px;
+      border-radius: 5px;
+      margin-bottom: 20px;
+    }
+    section article header h4 {
+      background-color: rgb(206, 98, 98);
+      margin-bottom: 10px;
+    }
+    section article div {
+      text-align: justify;
+    }
+    .noticias {
+      width: 100%;
+      max-width: 800px;
+      background-color: #333;
+      color: #fff;
+      padding: 20px;
+      border-radius: 5px;
+      margin-bottom: 30px;
+    }
+    .noticias h3 {
+      border-bottom: 2px solid #fff;
+      padding-bottom: 10px;
+      color: #fff;
+      margin-bottom: 20px;
+    }
+    .noticia {
+      margin-bottom: 20px;
+    }
+    .noticia h4 {
+      background-color: rgb(206, 98, 98);
+      margin-bottom: 5px;
+    }
+    .noticia p {
+      color: #ccc;
+    }
+    footer {
+      background-color: #333;
+      color: #fff;
+      text-align: center;
+      padding: 10px;
+      margin-top: auto;
+    }
+    h3{
+      background-color: firebrick;
+      text-align: center;
+    }
+  </style>
 </head>
 <body>
-    <header id="Titulo">
-        <h1 id="inicio">Novidades</h1>
-        <p>Alguns planos para o futuro do sistema</p>
+  <div class="container-fluid">
+    <header
+      class="d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom"
+    >
+      <a
+        href="/"
+        class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none"
+      >
+        <h1>
+          <img
+            src="tatakaititlet.png"
+            width="128"
+            height="51"
+            alt="Tatakai RPG"
+          />
+        </h1>
+      </a>
+      <ul class="nav nav-pills">
+        <li class="nav-item">
+          <a href="index.html" class="nav-link">Início</a>
+        </li>
+        <li class="nav-item">
+          <a href="personagens.html" class="nav-link">Personagens</a>
+        </li>
+        <li class="nav-item">
+          <a href="mundo.html" class="nav-link">Mundo</a>
+        </li>
+        <li class="nav-item">
+          <a href="novidades.html" class="nav-link active" aria-current="page"
+            >Novidades</a
+          >
+        </li>
+        <li class="nav-item">
+          <a href="suporte.html" class="nav-link">Suporte</a>
+        </li>
+      </ul>
     </header>
-    <nav>
-        <h2>Menu de Navegação</h2>
-        <ul>
-            <li><a href="index.html">Pagina Principal</a></li>
-            <li><a href="personagens.html">Personagens</a></li>
-            <li><a href="mundo.html">Mundo</a></li>
-            <li><a href="novidades.html"><b>Novidades</b></a></li>
-        </ul>
-    </nav>
-    <main>
+
+    <div>
+      <img src="novheader.png" alt="" width="100%" height="500px" max-width="100%" />
+  </div>
+
+
+    <main class="container-fluid">
+      <div>
         <section>
-            <header>
-                <h3>Livros?</h3>
-            </header>
-            <article>
-                <header>
-                    <h4>Tatakai: RPG System</h4>
-                </header>
-                <div>
-                    <p>O tatakai era simplesmente um sistema criado somente para uma diversão entre amigos, contudo, após anos de aperfeiçoamento se tornou um projeto com grande<br>
-                    potencial de entrar para o mercado brasileiro, ele possui uma jogabilidade diferenciada se comparada com outros RPG brasileiros, bem como um universo deveras diferente<br>
-                    dos RPGs clássicos do Brasil. Assim, é possivel que ele tenha um livro ofical, claro se adquirir o investimento nescessário para tal</p>
-                </div>
-            </article>
-        </section>
-        <section>
-            <header>
-                <h3>Expansões</h3>
-            </header>
-            <article>
-                <header>
-                    <h4>Tatakai: Talassofobia</h4>
-                </header>
-                <div>
-                    <p>O mundo de tatakai sofreu um anormal aumento de pluviliosidade no mundo inteiro, sendo algo como um dilúvio, foi totalmente estranho, ninguem sabia o motivo e<br>
-                    dessa forma todos os seres terrestre se tornaram naúfragos. Explore o mundo que sofreu alterações em sua fauna e flora, anos após o diluvio, e descobra os mistérios<br>
-                    por trás do diluvio.</p>
-                </div>
-            </article>
-            <article>
-                <header>
-                    <h4>Tatakai: Genética Expandida</h4>
-                </header>
-                <div>
-                    <p>Quase 100 traços não foi bom o bastante para você?... Okay, podemos resolver isso, essa expansão trás 50 novos traços, bem como, novas implementações de criação de<br>
-                    ficha. Além disso, há adições para os aprimoramentos corporais, medicina e animais.</p>
-                </div>
-            </article>
-            <article>
-                <header>
-                    <h4>Tatakai: Evocreatures</h4>
-                </header>
-                <div>
-                    <p>Já pensou em jogar como um animal selvagem, um dinossauro ou até mesmo um animal mágico? Se sim, esse é o cenário feito para você, em um mundo mágico que mistura o passado,<br>
-                    presente e o sobrenatural, o seu objetivo é sobreviver e se tornar a criatura mais forte, trazendo alterações em regras do sistema, 100 novas raças, e muito mais conteúdo para<br>
-                    a diversão de todos jogadores.</p>
-                </div>
-            </article>
-        </section>
+        <header>
+          <h3>Livros?</h3>
+        </header>
+        <article>
+          <header>
+            <h4>Tatakai: RPG System</h4>
+          </header>
+          <div>
+            <p>
+              O Tatakai começou como um simples sistema de RPG entre amigos,
+              mas após anos de aperfeiçoamento está se tornando um projeto com
+              potencial para entrar no mercado brasileiro. Possui uma
+              jogabilidade única em relação aos RPGs brasileiros e um universo
+              distinto. Existe a possibilidade de lançar um livro oficial,
+              dependendo dos investimentos necessários.
+              <br /><br />
+              Além disso, a equipe de desenvolvimento está explorando novas
+              parcerias para expandir ainda mais o universo de Tatakai,
+              incluindo a produção de materiais exclusivos para os fãs mais
+              dedicados.
+            </p>
+          </div>
+        </article>
+      </section>
+
+      <section>
+        <header>
+          <h3>Expansões</h3>
+        </header>
+        <article>
+          <header>
+            <h4>Tatakai: Talassofobia</h4>
+          </header>
+          <div>
+            <p>
+              O mundo de Tatakai foi subitamente inundado por uma anormal
+              quantidade de chuvas, resultando em um dilúvio que transformou
+              todos os seres terrestres em náufragos. Explore um mundo
+              alterado, anos após o dilúvio, e descubra os mistérios por trás
+              desse evento catastrófico.
+              <br /><br />
+              A expansão Talassofobia promete novos desafios e uma narrativa
+              envolvente que levará os jogadores a explorar as profundezas
+              subaquáticas e os segredos ocultos das ruínas submersas.
+            </p>
+          </div>
+        </article>
+
+        <article>
+          <header>
+            <h4>Tatakai: Genética Expandida</h4>
+          </header>
+          <div>
+            <p>
+              Com quase 100 traços não sendo suficientes para você, esta
+              expansão traz 50 novos traços, além de melhorias na criação de
+              fichas. Inclui também adições para aprimoramentos corporais,
+              medicina e animais.
+              <br /><br />
+              Prepare-se para personalizar seu personagem com uma gama ainda
+              maior de opções, explorando novas combinações genéticas e
+              experimentando novas estratégias em Tatakai.
+            </p>
+          </div>
+        </article>
+
+        <article>
+          <header>
+            <h4>Tatakai: Evocreatures</h4>
+          </header>
+          <div>
+            <p>
+              Entre na pele de uma criatura selvagem, dinossauro ou até mesmo
+              uma entidade mágica neste cenário que mistura passado, presente
+              e sobrenatural. Com regras revisadas, 100 novas raças e conteúdo
+              expandido para todos os jogadores.
+              <br /><br />
+              A expansão Evocreatures oferece uma experiência única de
+              jogo, permitindo aos jogadores explorar novas formas de
+              interação com o ambiente e outras criaturas, criando laços ou
+              desafiando o equilíbrio do mundo de Tatakai.
+            </p>
+          </div>
+        </article>
+      </section>
+      </div>
+      
+
+      <aside class="noticias">
+        <h3>Notícias do Mundo do RPG</h3>
+        <div class="noticia" id="NovoCapitulo">
+          <h4>Novo Capítulo de Tatakai RPG Lançado</h4>
+          <p>
+            Agora você pode conferir o mais recente capítulo da saga de
+            Tatakai RPG. Não perca as novas reviravoltas e desafios que
+            aguardam os heróis nesta emocionante jornada.
+            <br /><br />
+            A história se aprofunda nos mistérios do reino, revelando novos
+            personagens e conspirações que irão surpreender até os jogadores
+            mais experientes.
+          </p>
+        </div>
+        <div class="noticia" id="EventoEspecial">
+          <h4>Evento Especial: Luta pela Justiça</h4>
+          <p>
+            Participe do evento especial onde você poderá desafiar os maiores
+            lutadores do reino! Prepare-se para batalhas épicas e grandes
+            recompensas, enquanto busca trazer justiça aos cidadãos de
+            Tatakai.
+            <br /><br />
+            Os desafios são intensos e as recompensas são únicas, incentivando
+            a cooperação entre jogadores e estratégias astutas para superar
+            cada desafio do evento.
+          </p>
+        </div>
+        <div class="noticia" id="AtualizacaoPersonagens">
+          <h4>Atualização de Personagens</h4>
+          <p>
+            Conheça as novas habilidades e histórias dos personagens Thorkell,
+            One e Joe. Prepare-se para novos desafios e mistérios revelados
+            durante suas jornadas, enquanto enfrentam novos inimigos e
+            exploram novos territórios.
+            <br /><br />
+            Cada personagem traz uma dinâmica única para a história, com
+            desenvolvimentos que afetam não apenas eles mesmos, mas também o
+            mundo ao seu redor.
+          </p>
+        </div>
+        <div class="noticia" id="NovosMapas">
+          <h4>Novos Mapas e Temporadas</h4>
+          <p>
+            Explore os novos mapas do mundo de Tatakai e descubra as reviravoltas
+            emocionantes nas mais recentes temporadas. Prepare-se para aventuras
+            que irão expandir seus horizontes, enquanto descobre segredos
+            antigos e enfrenta desafios monumentais.
+            <br /><br />
+            Cada mapa traz novos desafios e oportunidades para os jogadores
+            explorarem, prometendo descobertas que mudarão a perspectiva dos
+            aventureiros sobre o universo de Tatakai.
+          </p>
+        </div>
+      </aside>
     </main>
-    <footer>
-        <p><b>©Tatakai Corps</b>, Copyright all rights are reserved</p>
-    </footer>
+  </div>
+
+      <footer class="row">
+        <div class="col text-center">
+          <footer
+            class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top"
+          >
+            <div class="col-md-4 d-flex align-items-center">
+              <a
+                href="/"
+                class="mb-3 me-2 mb-md-0 text-body-secondary text-decoration-none lh-1"
+              >
+                <svg class="bi" width="30" height="24">
+                  <use xlink:href="#bootstrap"></use>
+                </svg>
+              </a>
+              <span class="mb-3 mb-md-0 text-white"
+                ><b>© 2024 Tatakai Corps</b>, Todos os direitos reservados</span
+              >
+            </div>
+          </footer>
+        </div>
+      </footer>
+
+  <!-- Bootstrap JS Bundle -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
